docker fixed deploy