@@ -1,16 +1,26 @@
-FROM maven:3.6.3-jdk-8 AS build
+FROM maven:3.6.3-jdk-11 AS builder
 
 COPY ./src/ /root/src
 COPY ./pom.xml /root/
 COPY ./checkstyle.xml /root/
-
 WORKDIR /root
-RUN mvn clean install -X
+RUN mvn package
+RUN java -Djarmode=layertools -jar /root/target/ds-2020-0.0.1-SNAPSHOT.jar list
+RUN java -Djarmode=layertools -jar /root/target/ds-2020-0.0.1-SNAPSHOT.jar extract
+RUN ls -l /root
 
-FROM tomcat:8
+FROM openjdk:11.0.6-jre
 
 ENV TZ=UTC
-CMD  /usr/local/tomcat/bin/catalina.sh run
-COPY --from=build /root/target/ds-2020-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/ds-2020-0.0.1-SNAPSHOT.war
+ENV DB_IP=ec2-52-48-65-240.eu-west-1.compute.amazonaws.com
+ENV DB_PORT=5432
+ENV DB_USER=wlryktxyqpyomt
+ENV DB_PASSWORD=bee98a2afc7f0c3bcdd7df60ee7278ec5fa5cb4fb06a4039b1ffb1107d5851fd
+ENV DB_DBNAME=devidei2vqv0v4
 
+COPY --from=builder /root/dependencies/ ./
+COPY --from=builder /root/snapshot-dependencies/ ./
+COPY --from=builder /root/spring-boot-loader/ ./
+COPY --from=builder /root/application/ ./
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher","-XX:+UseContainerSupport -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Xms512m -Xmx512m -XX:+UseG1GC -XX:+UseSerialGC -Xss512k -XX:MaxRAM=72m"]
 EXPOSE 8080
